<resources>
    <string name="app_name">Škocjan</string>
    <string name="homeScreen">Find and collect NFC badges</string>
    <string name="zacni">Start</string>
    <string name="iskanjeLokacije">Searching for GPS signal</string>
    <string name="locationSearch">Near a badge, your phone will alert you</string>
    <string name="locationSearch2">Please wait for GPS signal. GPS does not work indoors.</string>
    <string name="nfcScan">Find NFC badge and place your phone on it</string>
    <string name="cestitamo1a">Congratulations! You picked up the first badge</string>
    <string name="cestitamo3a">Congratulations! You picked up the second badge</string>
    <string name="cestitamo4a">Congratulations! You picked up the third badge</string>
    <string name="cestitamo7a">Congratulations! You picked up the fourth badge</string>
    <string name="cestitamo10a">Congratulations! You picked up the fifth badge</string>
    <string name="cestitamo16a">Congratulations! You picked up the sixth badge</string>
    <string name="cestitamo19a">Congratulations! You picked up the seventh badge</string>
    <string name="cestitamo26a">ČESTITAMO! You successfully finished the education trial and received badge</string>
    <string name="cestitamo1b">Amateur researcher of the education trail</string>
    <string name="cestitamo3b">Forester of the education trail</string>
    <string name="cestitamo4b">Observer of animals</string>
    <string name="cestitamo7b">Researcher of the underground world</string>
    <string name="cestitamo10b">The fastest researcher</string>
    <string name="cestitamo16b">Researcher of wind</string>
    <string name="cestitamo19b">Cave explorer</string>
    <string name="cestitamo26b">Hiker of the education trail</string>
    <string name="cestitamo26c">You can pick up your badge at the information desk of Škocjan Caves Park.</string>
    <string name="naprej">Next</string>
    <string name="status">Badge Collection</string>
    <string name="nagrada">Animal Collection</string>
    <string name="status2">Put away your phone. Near the next badge, your phone will alert you</string>
    <string name="tabla3b">Tick/Mark the pictures of birds living on precipitous walls</string>
    <string name="odgovori">Answer</string>
    <string name="tabla4">Tick/Mark the animals that use tree holes as their nest or for hunting</string>
    <string name="tabla3bpopup2">The common cuckoo (Cuculus canorus) lives in coniferous forests, deciduous forests, cultural landscape and wetlands</string>
    <string name="tabla3bpopup4">The European robin (Erithacus rubecula) nests among dense roots in the woods</string>
    <string name="tabla3bpopup7">The white stork (Ciconia ciconia) nests in open cultural landscape with access to rivers, wetlands and floodplains</string>
    <string name="tabla3bpopup9">The black-headed gull (Larus ridibundus) inhabits standing water bodies near human settlements</string>
    <string name="tabla3a">100 years ago, this place was less covered by trees</string>
    <string name="tabla3arazlaga">In the past, Kras was less covered by trees  because of grazing and regular mowing. Move slider form left to right.</string>
    <string name="tabla4popup0">The Eurasian eagle-owl (Bubo bubo) commonly uses high, dry and broken steep walls for daily resting and nesting</string>
    <string name="tabla4popup2">The common swift (Apus apus) nests in high buildings; bell towers, under roof tiles, towers</string>
    <string name="tabla4popup5">The common redshank (Tringa totanus) nests in wet meadows with low vegetation and on coastal salt marshes</string>
    <string name="gumbZnova">Try again</string>
    <string name="DA">YES</string>
    <string name="NE">NO</string>
    <string name="DrziVleci">Hold and pull</string>
    <string name="zapri">Close</string>
    <string name="tabla26">Does the figure shown in the picture belong in a pond?</string>
    <string name="tabla26popup1">The goldfish is an invasive species and presents a threat to other native species.</string>
    <string name="tabla26popup4">The red-eared slider is an invasive species that with nesting supplants the autochthonous species of turtle, the European pond turtle.</string>
    <string name="tabla26popup5">Construction material does not belong in the pond, because it destroys the habitat of many animal and plant species.</string>
    <string name="napacno">Wrong</string>
    <string name="pravilno">Correct</string>
    <string name="drzivleci">Hold and pull</string>
    <string name="tabla7">Caves are an important living environment for some plant and animal species.</string>
    <string name="tabla7razlaga">There is no light in the underground, therefore plant species cannot grow there.</string>
    <string name="tabla10">The fastest predator in the world is the cheetah.</string>
    <string name="tabla10razlaga">The fastest predator is the peregrine falcon (Falco peregrinus), that reaches 320 km/h when praying on other birds.</string>
    <string name="navodila1">INSTRUCTIONS</string>
    <string name="navodila2">This application only works on <a href="http://www.park-skocjanske-jame.si/vsebina/izobrazevalni-programi/ucna-pot-skocjan">Educational Trail Škocjan</a>.\n\nSTEP 1\nTurn on data connection.\n\nSTEP 2\nLeave the application open at all times.\n\nSTEP 3\nPut the phone in your pocket and start your walk. When you get close to NFC badge, the phone will alert you by vibrating.\n\nSTEP 4\nFind the NFC badge and scan it by placing your phone over the badge.\n\nSTEP 5\nPlay with content to unlock rewards. You answer the questions by dragging your finger to YES or NO, or by selecting relevant pictures.\n\nDon\'t give up and continue to the end of the education trail. There are 8 titles to win!</string>
    <string name="tabla16">The wind is caused mainly by air pressure differences.</string>
    <string name="tabla19">Is the river Reka the longest subterranean river in Slovenia?</string>
    <string name="tabla16razlaga">Hot air is raising because it has lower density then cold air cousing pressure differences in the atmosphere.</string>
    <string name="tabla19razlaga">River Reka is the longest subterranean river in Slovenia. The river flows 50 km on the surface after which it submerges into the Škocjan cave system.</string>

    <string name="napacenOdgovor">Wrong answer! You did not choose all pictures. (</string>

    <string name="sova">http://www.studenti.famnit.upr.si/~klen/inudig/sova.html</string>
    <string name="zolna">http://www.studenti.famnit.upr.si/~klen/inudig/zolna.html</string>
    <string name="lastovka">http://www.studenti.famnit.upr.si/~klen/inudig/lastovka.html</string>
    <string name="sokol">http://www.studenti.famnit.upr.si/~klen/inudig/sokol.html</string>

    <string name="tabla3bimage0Text">Raven</string>
    <string name="tabla3bimage1Text">Alpine swift</string>
    <string name="tabla3bimage2Text">Cuckoo</string>
    <string name="tabla3bimage3Text">Rock bunting</string>
    <string name="tabla3bimage4Text">Robin</string>
    <string name="tabla3bimage5Text">Eagle owl</string>
    <string name="tabla3bimage6Text">Rock dove</string>
    <string name="tabla3bimage7Text">White stork</string>
    <string name="tabla3bimage8Text">Peregrine falcon</string>
    <string name="tabla3bimage9Text">Black-headed gull</string>
    <string name="tabla4image0Text">Eagle owl</string>
    <string name="tabla4image1Text">Green woodpecker</string>
    <string name="tabla4image2Text">Common swift</string>
    <string name="tabla4image3Text">Grey-headed woodpecker</string>
    <string name="tabla4image4Text">Lesser spotted woodpecker</string>
    <string name="tabla4image5Text">Redshank</string>
    <string name="tabla4image6Text">Great spotted woodpecker</string>
    <string name="tabla4image7Text">Great spotted woodpecker</string>
    <string name="tabla4image8Text">Black woodpecker</string>
    <string name="tabla26image0Text">Smooth newt</string>
    <string name="tabla26image1Text">Goldfish</string>
    <string name="tabla26image2Text">Toad</string>
    <string name="tabla26image3Text">Grass snake</string>
    <string name="tabla26image4Text">Red-eared slider</string>
    <string name="tabla26image5Text">Building materials</string>
    <string name="tabla26image6Text">Cattail</string>

    <string name="gpsTitle">GPS settings</string>
    <string name="gpsMessage">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gpsSettings">Settings</string>
    <string name="gpsCancel">Cancel</string>

    <string name="nfcTitle">NFC settings</string>
    <string name="nfcMessage">NFC is not enabled. Do you want to go to settings menu?</string>
    <string name="vrNagrada">Animals added to your collection.</string>
    <string name="title_activity_info">Info</string>
</resources>
