<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="android.parkskocjanskejame.NFCScan">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        tools:context="android.parkskocjanskejame.NFCScan">

        <android.parkskocjanskejame.utils.CustomTextView
            android:id="@+id/cestitamoText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:fontFamily="s"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cestitamo1a"
            android:textColor="@color/textColor"
            android:textSize="35dp"
            android:typeface="normal" />


        <ImageView
            android:id="@+id/cestitamoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cestitamoText1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/znacka1" />


        <android.parkskocjanskejame.utils.CustomTextView
            android:id="@+id/cestitamoText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cestitamoImage"
            android:layout_marginBottom="20dp"
            android:fontFamily="s"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cestitamo1b"
            android:textColor="@color/textColor"
            android:textSize="28dp"
            android:typeface="normal" />

        <android.parkskocjanskejame.utils.CustomTextView
            android:id="@+id/cestitamoText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cestitamoText2"
            android:layout_marginBottom="20dp"
            android:fontFamily="s"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:visibility="gone"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:typeface="normal" />

        <android.parkskocjanskejame.utils.CustomButton
            android:id="@+id/cestitamoButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@+id/cestitamoText3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custombutton"
            android:text="@string/naprej"
            android:textColor="@color/buttonTextColor"
            android:textSize="20dp" />



    </RelativeLayout>
</ScrollView>
    <ImageView
        android:id="@+id/help"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/help" />
</RelativeLayout>

    <!--?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="android.parkskocjanskejame.Cestitamo">

    <android.parkskocjanskejame.utils.CustomTextView
        android:id="@+id/cestitamoText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="25dp"
        android:text="@string/cestitamo1a"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <ImageView
        android:id="@+id/cestitamoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/znacka1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/cestitamoText1"
        android:layout_centerHorizontal="true" />

    <android.parkskocjanskejame.utils.CustomTextView
        android:id="@+id/cestitamoText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cestitamoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/cestitamo1b"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

    <android.parkskocjanskejame.utils.CustomTextView
        android:id="@+id/cestitamoText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cestitamoText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="18dp" />

    <android.parkskocjanskejame.utils.CustomButton
        android:id="@+id/cestitamoButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@+id/help"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custombutton"
        android:text="@string/naprej"
        android:textColor="@color/buttonTextColor"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/help"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/help" />

</RelativeLayout-->
